[package]
name = "gray"
version = "0.1.0"
edition = "2018"

[dependencies]
minifb = "0.20"
rand_distr = "0.4.2"

[dependencies.glam]
version = "0.20.2"
features = ["rand"]

[dependencies.rand]
version = "0.8.4"
default-features = false
features = ["small_rng"]

[dependencies.clap]
version = "3.0.0-rc.8"
features = ["derive"]
